--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
@@ -149,7 +149,7 @@
         </div>
     </section>
     <!--Чем мы занимаемся-->
-    <Section class="section">
+    <Section class="section section--examples">
     <div class="container">
             <h2 class="section__title">Чем мы занимаемся</h2>
             <ul class="examples">
