--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
     </section>
       <!-- Постоянные клиенты -->
-      <section class="section">
+      <section class="section section--clients">
        <div class="container">
         <h2 class="section__title">Постоянные клиенты</h2>
         <ul class="clients">
