--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 
     <main>
         <!-- Портфолио -->
-        <section class="section">
+        <section class="section section--gallery">
         <div class="container">
             <h2 class="section__title--none">Примеры работ</h2>
             <ul class="buttons">
