--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
     <div class="container">
     <nav class="page-header">
         <a href="./index.html" class="page-header__logo">Web<span class="page-header__accent">Studio</span></a>
-        
+        <button type="button" class="page-header__button button" 
+        aria-controls="page-header__menu"
+        aria-expanded="false" 
+        data-menu-button>
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                <use class="button__cross" href="./images/symbol-defs.svg#icon-close"></use>
+                <use class="button__menu" href="./images/symbol-defs.svg#icon-menu"></use> 
+            </svg>
+        </button>
+        <div class="page-header__menu" id="page-header__menu" data-menu>Контентное меню</div>
         <ul class="site-nav">
             <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--active">Студия</a></li>
             <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
@@ -444,22 +453,8 @@
             </div>
     </footer>
 
-    <script>
-    (() => {
-            const refs = {
-                openModalBtn: document.querySelector("[data-modal-open]"),
-                closeModalBtn: document.querySelector("[data-modal-close]"),
-                modal: document.querySelector("[data-modal]"),
-            };
-
-            refs.openModalBtn.addEventListener("click", toggleModal);
-            refs.closeModalBtn.addEventListener("click", toggleModal);
-
-            function toggleModal() {
-                refs.modal.classList.toggle("is-hidden");
-            }
-        })();
-    </script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html> 
 
