--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <use class="button__menu" href="./images/symbol-defs.svg#icon-menu"></use> 
             </svg>
         </button>
-        <div class="page-header__menu" id="page-header__menu" data-menu>Контентное меню</div>
+        <div class="page-header__menu" id="page-header__menu" data-menu>
         <ul class="site-nav">
             <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--active">Студия</a></li>
             <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
@@ -45,6 +45,7 @@
                 </svg>+38 096 111 11 11</a>
             </li>
         </ul>
+        </div>
     </nav>
     </div>
     </header>
