--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,14 @@
     <div class="container">
      <nav class="page-header">
          <a href="./index.html" class="page-header__logo">Web<span class="page-header__accent">Studio</span></a>
-         
+        <button type="button" class="page-header__button button" aria-controls="page-header__menu" aria-expanded="false"
+            data-menu-button>
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                <use class="button__cross" href="./images/symbol-defs.svg#icon-close"></use>
+                <use class="button__menu" href="./images/symbol-defs.svg#icon-menu"></use>
+            </svg>
+        </button>
+        <div class="page-header__menu" id="page-header__menu" data-menu>
          <ul class="site-nav">
              <li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студия</a></li>
              <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--active">Портфолио</a></li>
@@ -39,6 +46,7 @@
                     </svg>+38 096 111 11 11</a>
             </li>
         </ul>
+        </div>
      </nav>
     </div> 
     </header>
