--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         aria-controls="page-header__menu"
         aria-expanded="false" 
         data-menu-button>
-            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+            <svg width="19" height="19" aria-label="Переключатель мобильного меню">
                 <use class="button__cross" href="./images/symbol-defs.svg#icon-close"></use>
                 <use class="button__menu" href="./images/symbol-defs.svg#icon-menu"></use> 
             </svg>
@@ -39,10 +39,19 @@
                 </svg>info@devstudio.com</a>
             </li>
             <li class="contacts__item">
-                <a href="" class="contacts__link"> 
+                <a href="" class="contacts__link contacts__link--tel"> 
                 <svg class="contacts__icon" width="10" height="16">
                     <use href="./images/symbol-defs.svg#smartphone"></use>
                 </svg>+38 096 111 11 11</a>
+            </li>
+        </ul>
+        <ul class="soc">
+            <li class="soc__item">
+                <a class="soc__link" href="">Instagram</a>
+                <a class="soc__link" href="">Twitter</a>
+                <a class="soc__link" href="">Facebook</a>
+                <a class="soc__link" href="">LinkedIn</a>
+            
             </li>
         </ul>
         </div>
