--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,24 @@
             <ul class="card-set">
             <li class="card-set__elements">
             <div class="foto">
-                <img src="./images/portfolio1.jpg" alt="Техноряк" width="370" height="294">
+                <picture>
+                    <source 
+                    srcset="
+                    ./images/portfolio1-des-1x.jpg 1x,
+                    ./images/portfolio1-des-2x.jpg 2x"
+                    media="(min-width: 1200px)" >
+                    <source 
+                    srcset="
+                    ./images/portfolio1-tab-1x.jpg 1x,
+                    ./images/portfolio1-tab-2x.jpg 2x"
+                    media="(min-width: 768px)" >
+                    <source 
+                    srcset="
+                    ./images/portfolio1-mob-1x.jpg 1x,
+                    ./images/portfolio1-mob-2x.jpg 2x"
+                    media="(min-width: 480px)" >
+                    <img src="./images/portfolio1-mob-1x.jpg" alt="Техноряк" width="450" height="294">
+                </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -90,7 +107,24 @@
             </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio2.jpg" alt="Постер" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio2-des-1x.jpg 1x,
+                        ./images/portfolio2-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio2-tab-1x.jpg 1x,
+                        ./images/portfolio2-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio2-mob-1x.jpg 1x,
+                        ./images/portfolio2-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio2-mob-1x.jpg" alt="Постер" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -106,7 +140,24 @@
             </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio3-des-1x.jpg 1x,
+                        ./images/portfolio3-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio3-tab-1x.jpg 1x,
+                        ./images/portfolio3-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio3-mob-1x.jpg 1x,
+                        ./images/portfolio3-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio3-mob-1x.jpg" alt="Ресторан Seafood" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -122,7 +173,24 @@
             </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio4.jpg" alt="Наушники" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio4-des-1x.jpg 1x,
+                        ./images/portfolio4-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio4-tab-1x.jpg 1x,
+                        ./images/portfolio4-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio4-mob-1x.jpg 1x,
+                        ./images/portfolio4-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio4-mob-1x.jpg" alt="Наушники" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -138,7 +206,24 @@
             </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio5.jpg" alt="Две коробки" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio5-des-1x.jpg 1x,
+                        ./images/portfolio5-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio5-tab-1x.jpg 1x,
+                        ./images/portfolio5-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio5-mob-1x.jpg 1x,
+                        ./images/portfolio5-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio5-mob-1x.jpg" alt="Две коробки" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -154,7 +239,24 @@
             </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio6.jpg" alt="Екран монитора" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio6-des-1x.jpg 1x,
+                        ./images/portfolio6-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio6-tab-1x.jpg 1x,
+                        ./images/portfolio6-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio6-mob-1x.jpg 1x,
+                        ./images/portfolio6-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio6-mob-1x.jpg" alt="Екран монитора" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -170,7 +272,24 @@
             </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio7.jpg" alt="Журнал" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio7-des-1x.jpg 1x,
+                        ./images/portfolio7-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio7-tab-1x.jpg 1x,
+                        ./images/portfolio7-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio7-mob-1x.jpg 1x,
+                        ./images/portfolio7-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio7-mob-1x.jpg" alt="Журнал" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -186,7 +305,24 @@
              </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio8.jpg" alt="Бирочка" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio8-des-1x.jpg 1x,
+                        ./images/portfolio8-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio8-tab-1x.jpg 1x,
+                        ./images/portfolio8-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio8-mob-1x.jpg 1x,
+                        ./images/portfolio8-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio8-mob-1x.jpg" alt="Бирочка" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
@@ -202,7 +338,24 @@
             </li>
             <li class="card-set__elements">
                 <div class="foto">
-                <img src="./images/portfolio9.jpg" alt="Ноутбук" width="370" height="294">
+                    <picture>
+                        <source 
+                        srcset="
+                        ./images/portfolio9-des-1x.jpg 1x,
+                        ./images/portfolio9-des-2x.jpg 2x"
+                        media="(min-width: 1200px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio9-tab-1x.jpg 1x,
+                        ./images/portfolio9-tab-2x.jpg 2x"
+                        media="(min-width: 768px)" >
+                        <source 
+                        srcset="
+                        ./images/portfolio9-mob-1x.jpg 1x,
+                        ./images/portfolio9-mob-2x.jpg 2x"
+                        media="(min-width: 480px)" >
+                        <img src="./images/portfolio9-mob-1x.jpg" alt="Ноутбук" width="450" height="294">
+                    </picture>
                 <div class="foto__overlay">
                     <p class="foto__text">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
